advies en springs

--- a/behandelingen/schoenadvies.html
+++ b/behandelingen/schoenadvies.html
@@ -62,12 +62,12 @@
         </div>
     </nav>
     <!--einde navbar-->
-    <div class="container">
+    <div class="container doelgroep">
         <h1>Schoenadvies</h1>
 
         <!-- wat meebrengen -->
         <div class="container headline">
-            <h2> Algemene aandachtspunten bij het kopen van nieuwe schoenen: </h2>
+            <h2> Algemene aandachtspunten bij het kopen van nieuwe schoenen </h2>
             <form id="todo-list">
                 <span class="todo-wrap EenPerEen1">
                     <input type="checkbox" id="1" checked />
@@ -115,6 +115,42 @@
             </form>
         </div>
     </div>
+
+    <!-- Footer -->
+    <section id="footer">
+        <div class="container">
+            <div class="row text-center text-xs-center text-sm-left text-md-left">
+                <div class="col-xs-12 col-sm-4 col-md-4">
+                    <h5 class="footerheadings">Like ons op</h5>
+                    <i class="fab fa-facebook-square"></i>
+                </div>
+                <div class="col-xs-12 col-sm-4 col-md-4">
+                    <h5 class="footerheadings">Contacteer ons</h5>
+                    <address>
+                        <i class="fas fa-phone-alt"></i>
+                        0476/ 88 06 66
+                        <br>
+                        <i class="far fa-envelope"></i>
+                        <a href="mailto:#">thamaradevos@hotmail.com</a>
+                    </address>
+                </div>
+                <div class="col-xs-12 col-sm-4 col-md-4">
+                    <h5 class="footerheadings">Locatie</h5>
+                    <address>
+                        <strong>Podologie Thamara</strong>
+                        <br>Iepersteenweg 34
+                        <br>8650 Merkem
+                        <br>
+                    </address>
+                </div>
+            </div>
+            <hr>
+            <h5 class='vanbyte_footer'>2021 - <a href='https://www.vanbyte.be' target="_blank">VANBYTE</a></h5>
+        </div>
+        <br>
+
+    </section>
+    <!-- ./Footer -->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
