--- a/behandelingen/springs.html
+++ b/behandelingen/springs.html
@@ -59,7 +59,7 @@
         </div>
     </nav>
     <!--einde navbar-->
-    <div class="container">
+    <div class="container doelgroep">
         <h1>Springs&#174;</h1>
         <p>Draag je tijdens de zomer graag een open schoen, maar draag je podologische zolen? Dan kunnen Springs® de
             oplossing zijn
@@ -69,10 +69,48 @@
             jouw favoriete model, kleur van bovenwerk én type leder. Creëer zo jouw eigen unieke, persoonlijke en
             bovenal onmisbare
             slippers.</p>
-        <p>Klik <a href='https://www.springs-shoes.com/' target='_blank'>hier</a> voor meer info of neem gerust contact
+        <p>Klik <a href='https://www.springs-shoes.com/' target='_blank' class='hier'>hier</a> voor meer info of neem
+            gerust <a href='../contact.html' class='hier'>contact</a>
             op.</p>
 
     </div>
+
+
+    <!-- Footer -->
+    <section id="footer">
+        <div class="container">
+            <div class="row text-center text-xs-center text-sm-left text-md-left">
+                <div class="col-xs-12 col-sm-4 col-md-4">
+                    <h5 class="footerheadings">Like ons op</h5>
+                    <i class="fab fa-facebook-square"></i>
+                </div>
+                <div class="col-xs-12 col-sm-4 col-md-4">
+                    <h5 class="footerheadings">Contacteer ons</h5>
+                    <address>
+                        <i class="fas fa-phone-alt"></i>
+                        0476/ 88 06 66
+                        <br>
+                        <i class="far fa-envelope"></i>
+                        <a href="mailto:#">thamaradevos@hotmail.com</a>
+                    </address>
+                </div>
+                <div class="col-xs-12 col-sm-4 col-md-4">
+                    <h5 class="footerheadings">Locatie</h5>
+                    <address>
+                        <strong>Podologie Thamara</strong>
+                        <br>Iepersteenweg 34
+                        <br>8650 Merkem
+                        <br>
+                    </address>
+                </div>
+            </div>
+            <hr>
+            <h5 class='vanbyte_footer'>2021 - <a href='https://www.vanbyte.be' target="_blank">VANBYTE</a></h5>
+        </div>
+        <br>
+
+    </section>
+    <!-- ./Footer -->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
