--- a/behandelingen/voetverzorging.html
+++ b/behandelingen/voetverzorging.html
@@ -13,6 +13,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,400;1,200&display=swap"
         rel="stylesheet">
+    <!--font awesome-->
+    <script src="https://kit.fontawesome.com/2d11755fa6.js" crossorigin="anonymous"></script>
     <title>Voetverzorging</title>
 </head>
 
@@ -59,10 +61,10 @@
         </div>
     </nav>
     <!--einde navbar-->
-    <div class="container">
+    <div class="container doelgroep">
         <h1>Podologische voetverzorging</h1>
 
-        <div class="container">
+        <div class="container behandeling_container">
             <h2>Instrumentele behandeling</h2>
             <div class="container behandeling">
                 <p>Een podoloog gaat, buiten het knippen en frezen van uw nagels, ook huid- en nagelaandoeningen
@@ -77,7 +79,7 @@
             </div>
         </div>
 
-        <div class="container">
+        <div class="container behandeling_container">
             <h2>Vilttherapie</h2>
             <div class="container behandeling">
                 <p>Door middel van vilttherapie kunnen pijnlijke plaatsen drukvrij gelegd worden. De vilt kan gedurende
@@ -88,7 +90,7 @@
             </div>
         </div>
 
-        <div class="container">
+        <div class="container behandeling_container">
             <h2>Silicone- orthese (orthoplastie)</h2>
             <div class="container behandeling_omgekeerd">
                 <p>Bij siliconentherapie wordt uit silicone een, volledig op maat, hulpstuk gemaakt en aangebracht
@@ -100,7 +102,7 @@
             </div>
         </div>
 
-        <div class="container">
+        <div class="container behandeling_container">
             <h2>Nagelreparatietechniek (onychoplastie)</h2>
             <div class="container behandeling">
                 <p>Bij onychoplastie wordt de gedeeltelijk verwijderde nagelplaat aangebouwd met een kunststof, zodat
@@ -111,7 +113,7 @@
             </div>
         </div>
 
-        <div class="container">
+        <div class="container behandeling_container">
             <h2>Nagelbeugeltechniek (orthonyxie)</h2>
             <div class="container behandeling">
                 <p>Een te sterk gekromdenagelplaat kan wel eens drukpijn geven ter hoogte van de nagelwal of kan de
