--- a/behandelingen/springs.html
+++ b/behandelingen/springs.html
@@ -13,6 +13,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,400;1,200&display=swap"
         rel="stylesheet">
+    <!--font awesome-->
+    <script src="https://kit.fontawesome.com/2d11755fa6.js" crossorigin="anonymous"></script>
     <title>Springs&#174;</title>
 </head>
 
