add navheader behandelingen

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     U kan terecht bij een podoloog op eigen initiatief of via doorverwijzing van de huisarts of
                     specialist.
                 </p>
-                <a class="btn btn-primary btn-lg" href="#">Bekijk onze doelgroepen &raquo;</a>
+                <a class="btn btn-primary btn-lg" href="./doelgroep.html">Bekijk onze doelgroepen &raquo;</a>
             </div>
             <div class="col-md-4 mb-5">
                 <h2>Contacteer ons</h2>
@@ -137,7 +137,7 @@
                             necessitatibus neque sequi doloribus totam ut praesentium aut.</p>
                     </div>
                     <div class="card-footer">
-                        <a href="#" class="btn btn-primary">Lees meer!</a>
+                        <a href="./behandelingen/zolen.html" class="btn btn-primary">Lees meer!</a>
                     </div>
                 </div>
             </div>
@@ -150,7 +150,7 @@
                             necessitatibus neque sequi doloribus.</p>
                     </div>
                     <div class="card-footer">
-                        <a href="#" class="btn btn-primary">Lees meer!</a>
+                        <a href="./behandelingen/voetverzorging.html" class="btn btn-primary">Lees meer!</a>
                     </div>
                 </div>
             </div>
@@ -163,7 +163,7 @@
                             necessitatibus neque.</p>
                     </div>
                     <div class="card-footer">
-                        <a href="#" class="btn btn-primary">Lees meer!</a>
+                        <a href="./behandelingen/schoenadvies.html" class="btn btn-primary">Lees meer!</a>
                     </div>
                 </div>
             </div>
