--- a/behandelingen/schoenadvies.html
+++ b/behandelingen/schoenadvies.html
@@ -62,6 +62,19 @@
         </div>
     </nav>
     <!--einde navbar-->
+    <!--verwijzing naar andere behandelingen-->
+    <div class="container verwijzing">
+        <nav aria-label="Page navigation example">
+            <ul class="pagination justify-content-center">
+                <li class="page-item"><a class="page-link" href="./voetverzorging.html">Voetverzorging</a></li>
+                <li class="page-item"><a class="page-link" href="./zolen.html">Zolen</a></li>
+                <li class="page-item "><a class="page-link" href="./springs.html">Springs&#174;</a></li>
+                <li class="page-item active actieveVerwijzing"><a class="page-link"
+                        href="./schoenadvies.html">Schoenadvies</a></li>
+            </ul>
+        </nav>
+    </div>
+
     <div class="container doelgroep">
         <h1>Schoenadvies</h1>
 
