--- a/behandelingen/schoenadvies.html
+++ b/behandelingen/schoenadvies.html
@@ -69,8 +69,7 @@
                 <li class="page-item"><a class="page-link" href="./voetverzorging.html">Voetverzorging</a></li>
                 <li class="page-item"><a class="page-link" href="./zolen.html">Zolen</a></li>
                 <li class="page-item "><a class="page-link" href="./springs.html">Springs&#174;</a></li>
-                <li class="page-item active actieveVerwijzing"><a class="page-link"
-                        href="./schoenadvies.html">Schoenadvies</a></li>
+                <li class="page-item actief"><a class="page-link" href="./schoenadvies.html">Schoenadvies</a></li>
             </ul>
         </nav>
     </div>
