--- a/behandelingen/voetverzorging.html
+++ b/behandelingen/voetverzorging.html
@@ -66,7 +66,7 @@
     <div class="container verwijzing">
         <nav aria-label="Page navigation example">
             <ul class="pagination justify-content-center">
-                <li class="page-item active actieveVerwijzing"><a class="page-link" href="#">Voetverzorging</a></li>
+                <li class="page-item actief"><a class="page-link" href="#">Voetverzorging</a></li>
                 <li class="page-item"><a class="page-link" href="./zolen.html">Zolen</a></li>
                 <li class="page-item"><a class="page-link" href="./springs.html">Springs&#174;</a></li>
                 <li class="page-item"><a class="page-link" href="./schoenadvies.html">Schoenadvies</a></li>
@@ -138,6 +138,42 @@
         </div>
 
     </div>
+
+    <!-- Footer -->
+    <section id="footer">
+        <div class="container">
+            <div class="row text-center text-xs-center text-sm-left text-md-left">
+                <div class="col-xs-12 col-sm-4 col-md-4">
+                    <h5 class="footerheadings">Like ons op</h5>
+                    <i class="fab fa-facebook-square"></i>
+                </div>
+                <div class="col-xs-12 col-sm-4 col-md-4">
+                    <h5 class="footerheadings">Contacteer ons</h5>
+                    <address>
+                        <i class="fas fa-phone-alt"></i>
+                        0476/ 88 06 66
+                        <br>
+                        <i class="far fa-envelope"></i>
+                        <a href="mailto:#">thamaradevos@hotmail.com</a>
+                    </address>
+                </div>
+                <div class="col-xs-12 col-sm-4 col-md-4">
+                    <h5 class="footerheadings">Locatie</h5>
+                    <address>
+                        <strong>Podologie Thamara</strong>
+                        <br>Iepersteenweg 34
+                        <br>8650 Merkem
+                        <br>
+                    </address>
+                </div>
+            </div>
+            <hr>
+            <h5 class='vanbyte_footer'>2021 - <a href='https://www.vanbyte.be' target="_blank">VANBYTE</a></h5>
+        </div>
+        <br>
+
+    </section>
+    <!-- ./Footer -->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
