--- a/index.html
+++ b/index.html
@@ -1,248 +1,7 @@
-<!doctype html>
-<html lang="nl">
-
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,400;1,200&display=swap"
-        rel="stylesheet">
-
-    <title>Home</title>
-
-    <!--font awesome-->
-    <script src="https://kit.fontawesome.com/2d11755fa6.js" crossorigin="anonymous"></script>
-</head>
-
+<!DOCTYPE html>
+<html>
 <body>
-
-
-    <!--navbar-->
-    <nav class="navbar navbar-expand-lg navbar-light">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="./index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./doelgroep.html">Doelgroep</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Behandelingen
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="./behandelingen/voetverzorging.html">Podologische
-                            voetverzorging</a>
-                        <a class="dropdown-item" href="./behandelingen/zolen.html">Podologische zolen</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="./behandelingen/springs.html">Springs &#169;</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="./behandelingen/schoenadvies.html">Schoenadvies </a>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./terugbetaling.html">Terugbetaling</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./contact.html">Contact</a>
-                </li>
-
-            </ul>
-        </div>
-    </nav>
-    <!--einde navbar-->
-
-    <!-- Header -->
-    <header class="py-5 mb-5 header ">
-        <div class="container h-100 ">
-            <div class="row h-100 ">
-                <div class="container logo_trans">
-                    <div class="col-lg-12">
-                        <h1 class="display-4 text-white mt-5 mb-2">Welkom bij Podologie Thamara! </h1>
-                        <p class="lead mb-5 text-white-50">U kan bij ons terecht voor verschillende behandelingen, dit
-                            op
-                            eigen initiatief of via doorverwijzing van de huisarts of specialist.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </header>
-
-    <!-- Page Content -->
-    <div class="container">
-
-        <div class="row">
-            <div class="col-md-8 mb-5">
-                <h2>Wat doet een podoloog?</h2>
-                <hr>
-                <p>De podoloog is een paramedicus die aandoeningen ter hoogte van de voet onderzoekt en indien nodig
-                    behandelt. <br><br>
-                    Een podoloog behandelt zowel nagel- en huidaandoeningen (bv. eelt, likdoorn, ingegroeide nagels…),
-                    maar ook hoger
-                    gelegen
-                    klachten, zoals knie-, heup- en rugklachten die hun oorzaak vinden bij de voet behoren tot het
-                    werkveld van de podoloog.
-                    De
-                    podoloog vervult ook een belangrijke rol bij de behandeling van de voeten van patiënten met
-                    chronische ziekten zoals
-                    diabetes en
-                    reuma.
-                    <br>
-                    <br>
-                    U kan terecht bij een podoloog op eigen initiatief of via doorverwijzing van de huisarts of
-                    specialist.
-                </p>
-                <a class="btn btn-primary btn-lg" href="./doelgroep.html">Bekijk onze doelgroepen &raquo;</a>
-            </div>
-            <div class="col-md-4 mb-5">
-                <h2>Contacteer ons</h2>
-                <hr>
-                <address>
-                    <strong>Podologie Thamara</strong>
-                    <br>Iepersteenweg 34
-                    <br>8650 Merkem
-                    <br>
-                </address>
-                <address>
-                    <i class="fas fa-phone-alt"></i>
-                    0476/ 88 06 66
-                    <br>
-                    <i class="far fa-envelope"></i>
-                    <a href="mailto:#">thamaradevos@hotmail.com</a>
-                </address>
-            </div>
-        </div>
-        <!-- /.row -->
-
-        <div class="row">
-
-            <div class="col-md-4 mb-5">
-                <div class="card h-100">
-                    <img class="card-img-top" src="./assets/zolen1.jpg" alt="">
-                    <div class="card-body">
-                        <h4 class="card-title">Podologische zolen</h4>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse
-                            necessitatibus neque sequi doloribus totam ut praesentium aut.</p>
-                    </div>
-                    <div class="card-footer">
-                        <a href="./behandelingen/zolen.html" class="btn btn-primary">Lees meer!</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 mb-5">
-                <div class="card h-100">
-                    <img class="card-img-top" src="./assets/voetverzorging1.jpg" alt="">
-                    <div class="card-body">
-                        <h4 class="card-title">Voetverzorging</h4>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse
-                            necessitatibus neque sequi doloribus.</p>
-                    </div>
-                    <div class="card-footer">
-                        <a href="./behandelingen/voetverzorging.html" class="btn btn-primary">Lees meer!</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 mb-5">
-                <div class="card h-100">
-                    <img class="card-img-top" src="./assets/schoenadvies1.jpg" alt="">
-                    <div class="card-body">
-                        <h4 class="card-title">Schoenadvies</h4>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse
-                            necessitatibus neque.</p>
-                    </div>
-                    <div class="card-footer">
-                        <a href="./behandelingen/schoenadvies.html" class="btn btn-primary">Lees meer!</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- /.row -->
-
-    </div>
-    <!-- /.container -->
-    <div class="container over_mezelf_container">
-        <div class='row'>
-            <div class="col-md-8 mb-5">
-                <h2>Over mezelf</h2>
-                <hr>
-                <p>Met mijn interesse in de voet en het menselijk lichaam begon ik de opleiding podologie aan de
-                    Artevelde
-                    Hogeschool, waar ik in 2019 ben afgestudeerd. Daarna besloot ik om mijn eigen praktijk op te starten
-                    en
-                    volgde ik nog twee postgraduaten. In de 2020 behaalde ik <strong>‘postgraduaat
-                        diabeteseducator’</strong> en
-                    <strong>‘postgraduaat in de wondzorg’</strong> aan de VIVES Hogeschool.
-                    <br><br>Door mezelf regelmatig bij te scholen blijf ik op de hoogte van nieuwe technieken en
-                    behandelingen,
-                    zodat ik de beste oplossing kan aanbieden.
-                </p>
-                <a class="btn btn-primary btn-lg" href="#">Bekijk onze behandelingen &raquo;</a>
-            </div>
-            <div class="col-md-4 mb-5"><img class='profielfoto' src="assets/profielfoto.jpg" alt="mezelf"></div>
-        </div>
-    </div>
-
-    </div>
-
-    <!-- Footer -->
-    <section id="footer">
-        <div class="container">
-            <div class="row text-center text-xs-center text-sm-left text-md-left">
-                <div class="col-xs-12 col-sm-4 col-md-4">
-                    <h5 class="footerheadings">Like ons op</h5>
-                    <i class="fab fa-facebook-square"></i>
-                </div>
-                <div class="col-xs-12 col-sm-4 col-md-4">
-                    <h5 class="footerheadings">Contacteer ons</h5>
-                    <address>
-                        <i class="fas fa-phone-alt"></i>
-                        0476/ 88 06 66
-                        <br>
-                        <i class="far fa-envelope"></i>
-                        <a href="mailto:#">thamaradevos@hotmail.com</a>
-                    </address>
-                </div>
-                <div class="col-xs-12 col-sm-4 col-md-4">
-                    <h5 class="footerheadings">Locatie</h5>
-                    <address>
-                        <strong>Podologie Thamara</strong>
-                        <br>Iepersteenweg 34
-                        <br>8650 Merkem
-                        <br>
-                    </address>
-                </div>
-            </div>
-            <hr>
-            <h5 class='vanbyte_footer'>2021 - <a href='https://www.vanbyte.be' target="_blank">VANBYTE</a></h5>
-        </div>
-        <br>
-
-    </section>
-    <!-- ./Footer -->
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
+<h1>Hello World</h1>
+<p>I'm hosted with GitHub Pages.</p>
 </body>
-
 </html>
